--- a/css/new_material/css/styles.css
+++ b/css/new_material/css/styles.css
@@ -84,7 +84,7 @@ form .form-control {
   box-shadow:1px 1px 1px rgba(0,0,0,0.05);
   outline:none;
   color:inherit;
-  padding-left:12px;
+  padding-left:12px !important;
   height:42px;
 }
 
@@ -217,5 +217,27 @@ form .btn {
 
 .wizard_title {
   padding-bottom:20px;
+}
+
+.three.wizard .nav-tabs > li {
+  width:33.33%;
+}
+
+select:focus, select.form-control:focus {
+  -webkit-box-shadow:inset 0 -2px 0 #2196f3;
+  box-shadow:inset 0 -2px 0 #2196f3;
+  background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAMAAACelLz8AAAAJ1BMVEUhISEhISEhISEhISEhISEhISEhISEhISEhISEhISEhISEhISEhISF8S9ewAAAADHRSTlMAAgMJC0uWpKa6wMxMdjkoAAAANUlEQVR4AeXJyQEAERAAsNl7Hf3X6xt0QL6JpZWq30pdvdadme+0PMdzvHm8YThHcT1H7K0BtOMDniZhWOgAAAAASUVORK5CYII=);
+  background-position:right;
+  background-repeat:no-repeat;
+}
+
+textarea, textarea.form-control, input.form-control, input[type=text], input[type=password], input[type=email], input[type=number], [type=text].form-control, [type=password].form-control, [type=email].form-control, [type=tel].form-control, [contenteditable].form-control {
+  /*padding:10px;*/
+  border:none;
+  border-radius:0;
+  -webkit-appearance:none;
+  -webkit-box-shadow:inset 0 -1px 0 #ddd;
+  box-shadow:inset 0 -1px 0 #ddd;
+  font-size:16px;
 }
 
