--- a/css/Navigation-Clean1.css
+++ b/css/Navigation-Clean1.css
@@ -77,7 +77,7 @@ main.faea32ab.css:5 100% {
   bottom:400px;
   height:230px;
   width:100%;
-  background:url('./sample2.png');
+  background:url('../sample2.png');
   background-repeat:repeat-x;
   background-position:top center;
   background-size:contain;
