Element positioning Adding Back URL, Content Sizes and Mobile Responsiveness

--- a/css/new_material/tabs.css
+++ b/css/new_material/tabs.css
@@ -93,6 +93,10 @@
 .well{
     padding:0px;
 }
+.tab-pane{
+    background-color: white;
+}
+
 @media screen and (max-width: 300px) {
     .btn-group-justified > .btn, .btn-group-justified > .btn-group {
         width: 100%;
