--- a/css/new_material/view_folder.css
+++ b/css/new_material/view_folder.css
@@ -7,6 +7,7 @@ ul{
 }
 ul li {
     list-style: none;
+    font-size: 20px;
     padding:10px;
     border-bottom: 1px solid white;
     overflow-wrap: break-word;
@@ -33,18 +34,22 @@ html {
 }
 .btn-pref{
     position: fixed;
-    top: 36px;
+    top: 70px;
+}
+.button_for_folders span {
+    font-size: 26px;
 }
 .card-info{
     text-align: center;
     position: fixed;
     top: 0px;
-    font-size: 20px;
+    font-size: 40px;
     background-color: white;
 }
 .well{
     position: relative;
-    top: 84px;
+    top: 146px;
+    margin: 0px;
 }
 .viewer_container{
     padding: 0px;
@@ -52,6 +57,10 @@ html {
 .iframe_container{
     position: fixed;
     padding: 0px;
+}
+.file_container{
+    top: 150px;
+    position: fixed;
 }
 .content_container{
     padding-right: 0px;
@@ -67,9 +76,25 @@ html {
     width: 83%;
 }
 .back{
-    font-size: 13px;
+    font-size: 29px;
     vertical-align: middle;
-    top: 7px;
+    top: 18px;
+    left: 15px;
     cursor: pointer;
-    height: 100%;
+}
+.the_iframe{
+    height: 85%;
+    width: 99%;
+}
+.back i{
+    font-size: 36px!important;
+    color: #ff9800;
+}
+
+.toggle_navigation{
+    height: 100px;
+    font-size: 20px;
+}
+.button_for_folders{
+    height: 75px;
 }
